@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/10/13
+	* Again modified the delayfix function to reflect the current skill delay
+	  knowledge. Skills with 0 delay use amotion always (regardless of cast
+	  times) [Skotlex]
 2007/10/12
 	* Further updates to skill_delayfix function [Playtester]
 	- aftercast delay can never be lower than amotion
